# mac-slideshow

./: README.md  package.json  setup.cfg  setup.py
scripts/: slideshow
