# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-slideshow
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-slideshow
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = slideshow screensaver

[options]
install_requires = 
	setuptools
scripts = 
	scripts/slideshow
